In proccess of adding imageproccessor microservice
